[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/MENU Icons/SpaceStrife.png" type="Texture" id=1]
[ext_resource path="res://Assets/MENU Icons/StarBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/MENU Icons/Quit.png" type="Texture" id=3]
[ext_resource path="res://Assets/MENU Icons/Menu.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MenuScenes/MenuControl.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 480, 270 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )

[node name="SpaceStrife" type="Sprite" parent="."]
position = Vector2( 480, 100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="MenuControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MenuControl"]
margin_left = 417.0
margin_top = 350.0
margin_right = 459.0
margin_bottom = 370.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="MenuControl"]
margin_left = 410.0
margin_top = 280.0
margin_right = 456.0
margin_bottom = 300.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuControl"]
margin_left = 224.647
margin_top = 124.54
margin_right = 480.647
margin_bottom = 211.54
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Created By
Kevin Schoonover"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuControl/Quit" to="MenuControl" method="_on_Quit_pressed"]
[connection signal="pressed" from="MenuControl/Menu" to="MenuControl" method="_on_Menu_pressed"]
