[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/MENU Icons/SpaceStrife.png" type="Texture" id=1]
[ext_resource path="res://Assets/MENU Icons/Play.png" type="Texture" id=2]
[ext_resource path="res://Assets/MENU Icons/StarBackground.png" type="Texture" id=3]
[ext_resource path="res://Assets/MENU Icons/Quit.png" type="Texture" id=4]
[ext_resource path="res://Assets/MENU Icons/Credits.png" type="Texture" id=5]
[ext_resource path="res://Assets/MENU Icons/Controls.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MenuScenes/MenuControl.gd" type="Script" id=7]

[node name="Game" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 480, 270 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="SpaceStrife" type="Sprite" parent="."]
position = Vector2( 480, 100 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="MenuControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="MenuControl"]
margin_left = 420.0
margin_top = 180.0
margin_right = 462.0
margin_bottom = 200.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MenuControl"]
margin_left = 420.0
margin_top = 250.0
margin_right = 462.0
margin_bottom = 270.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="MenuControl"]
margin_left = 384.0
margin_top = 320.0
margin_right = 450.0
margin_bottom = 340.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="MenuControl"]
margin_left = 372.0
margin_top = 390.0
margin_right = 446.0
margin_bottom = 410.0
rect_scale = Vector2( 3, 3 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MenuControl/Play" to="MenuControl" method="_on_Play_pressed"]
[connection signal="pressed" from="MenuControl/Quit" to="MenuControl" method="_on_Quit_pressed"]
[connection signal="pressed" from="MenuControl/Credits" to="MenuControl" method="_on_Credits_pressed"]
[connection signal="pressed" from="MenuControl/Controls" to="MenuControl" method="_on_Controls_pressed"]
